[tool.poetry]
name = "tips"
version = "0.1.0"
description = ""
authors = ["Cristobal Contreras Rubio <crisconru@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.10"
mkdocs-minify-plugin = "^0.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
