
[project]
name = "tips"
version = "0.1.0"
description = ""
authors = [
    {name = "Cristóbal Contreras Rubio", email = "crisconru@gmail.com"},
]
dependencies = [
    "mkdocs>=1.4.3",
    "mkdocs-material>=9.1.18",
    "mkdocs-minify-plugin>=0.6.4",
    "mkdocs-glightbox>=0.3.4",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
