[tool.poetry]
name = "flethings"
version = "0.1.0"
description = ""
authors = ["Cristobal Contreras Rubio <crisconru@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4"
flet = "^0.2.4"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
